1、读取appsetting.json配置 代码修改

--- a/sample/SampleService.IdentityServer/appsettings.json
+++ b/sample/SampleService.IdentityServer/appsettings.json
@@ -7,7 +7,7 @@
       "Microsoft": "Information"
     },
     "IdentityOptions": {
-      "Redis": "localhost:6379,password=geffzhang",
+      "Redis": "192.168.200.187:6379",
       "DbNum": 2
     }
   }
